[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ressources/Images/KennyWorkspacesLighterWIP.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UITest/TransparentButtonStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://Scenes/UITest/DarkButtonStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://Ressources/Images/KennyWorkspacesDarkAreaWIP.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UITest/UITestCamera.gd" type="Script" id=5]

[node name="ZoomingCamera2D" type="Camera2D"]
anchor_mode = 0
current = true
smoothing_enabled = true
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="Buttons" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Buttons"]
margin_left = 43.0
margin_top = 314.0
margin_right = 473.0
margin_bottom = 585.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
shortcut_in_tooltip = false
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 487.0
margin_top = 327.0
margin_right = 918.0
margin_bottom = 598.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
shortcut_in_tooltip = false
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Buttons"]
margin_left = 487.0
margin_top = 43.0
margin_right = 918.0
margin_bottom = 313.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
shortcut_in_tooltip = false
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Buttons"]
margin_left = 43.0
margin_top = 48.0
margin_right = 473.0
margin_bottom = 314.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
shortcut_in_tooltip = false
button_mask = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkOutline" type="Sprite" parent="Buttons"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Buttons/Button" to="." method="_on_Button_pressed" binds= [ Vector2( 0, 320 ) ]]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button_pressed" binds= [ Vector2( 480, 320 ) ]]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button_pressed" binds= [ Vector2( 480, 0 ) ]]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button_pressed" binds= [ Vector2( 0, 0 ) ]]
